--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,9 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Visionrate | Олимпиада по робототехнике</title>
+	<title>ROBOTOFEST | Олимпиада по робототехнике</title>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -175,7 +177,7 @@
 			<div class="row">
 				<div class="span4 animated-fast flyIn">					
 					<div class="service-box">
-						<a href="/category" class="categ" style="text-decoration:none;">
+						<a href="https://drive.google.com/open?id=1w8SpQ7cjOSkYZBZH3Pq0zN9lyYQYyPpM" target="_blank" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/line_follower.svg' %}" alt="" />
 						<h2>Lego Line follower</h2>
 						<p>
@@ -186,7 +188,7 @@
 				</div>
 				<div class="span4 animated flyIn">
 					<div class="service-box">
-						<a href="/category" class="categ" style="text-decoration:none;">
+						<a href="https://drive.google.com/open?id=1ZhCd9-2zTPdeeYHJDu60_jU1rw4gsbSF" target="_blank" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/sumo.svg' %}" alt="" />
 						<h2>Lego Sumo</h2>
 						<p>
@@ -197,7 +199,7 @@
 				</div>
 				<div class="span4 animated-fast flyIn">
 					<div class="service-box">
-						<a href="/category" class="categ" style="text-decoration:none;">
+						<a href="https://drive.google.com/open?id=1DI2FA4unxC6L1YA_yU5X4PMzTL1Meikx" target="_blank" class="categ" style="text-decoration:none;">
 						<img src="{% static 'img/icons/arduino.svg' %}" alt="" />
 						<h2>Ardunio Line Follower</h2>
 						<p>
@@ -211,7 +213,7 @@
 			<div class="row" style="margin-bottom:0px;">
 				<div class="span4 animated-fast flyIn">
 					<div class="service-box">
-						<a href="/category" class="categ" style="text-decoration:none;">
+						<a href="https://drive.google.com/open?id=1fmcqZrnMLruEzXFLjYu1PAxBaQRZUuBT" target="_blank" class="categ" style="text-decoration:none;">
 							<img src="{% static 'img/icons/ollo_ball.svg' %}" alt="" />
 							<h2>Ollo Ball Collector</h2>
 							<p>								
@@ -222,7 +224,7 @@
 				</div>
 				<div class="span4 animated-slow flyIn">
 					<div class="service-box">
-						<a href="https://drive.google.com/open?id=0B0LDzlXpvfGaaVh2c3RfclNoaEk" target="_blank" class="categ" style="text-decoration:none;">
+						<a href="https://drive.google.com/open?id=1h_XJrP7U49Yavr-cpjSpuiyC62NCSL8s" target="_blank" class="categ" style="text-decoration:none;">
 							<img src="{% static 'img/icons/ollo_race.svg' %}" alt="" />
 							<h2>Ollo Race</h2>
 							<p>
@@ -399,6 +401,15 @@
 			</div>
 		</div>
 	</section>
+	<section id="video" class="section">
+		<div class="container">
+			<div class="row" style="padding-top:3%;">
+				<iframe width="660" height="415" src="https://www.youtube-nocookie.com/embed/v4UejoHl9Ho" frameborder="0" allow="autoplay; encrypted-media"
+				 allowfullscreen></iframe>
+	
+			</div>
+		</div>
+	</section>
 	<!-- spacer section -->
 	<section id="facts">
 		<div class="container-wow-fadeIn">
@@ -407,17 +418,17 @@
 			</div>
 			<div class="row-counters">	
 				<div class="col-lg-3 col-6">
-					<span data-toggle="counter" class="counter">232</span>
+					<span data-toggle="counter" class="counter">30</span>
 					<p class="facts">Школы</p>
 				</div>
 	
 				<div class="col-lg-3 col-6">
-					<span data-toggle="counter" class="counter"><span>546</span></span>
+					<span data-toggle="counter" class="counter"><span>76</span></span>
 					<p class="facts">Роботы</p>
 				</div>
 	
 				<div class="col-lg-3 col-6">
-					<span data-toggle="counter" class="counter">1630</span>
+					<span data-toggle="counter" class="counter">150</span>
 					<p class="facts">Участники</p>
 				</div>	
 			</div>
@@ -454,8 +465,8 @@
           
         </div>
         <div class="meta-date">
-          <span class="date">01</span>
-          <span class="month">Март</span>
+          <span class="date">28</span>
+          <span class="month">Фев</span>
         </div>
       </div>
       <!-- // Article -->
@@ -494,9 +505,20 @@
 
 	<!-- end spacer section -->
 	<!-- section: contact -->
-
 	
+	<section id="payment" class="section">
+		<div class="container">
+			<div class="span11  flyLeft">
+			<h4 style="text-align:left;">Оплатa</h4>
+			<div class="row payment1">				
+				<p class="txt">500 сом за каждого участника. Дата оплаты 9-марта</p>				
 	
+			</div>
+			</div>
+		</div>
+	
+		<!-- /.container -->
+	</section>
 	<footer>
 		<div class="container">
 			<div class="row">
@@ -547,8 +569,8 @@
 	<script src="{% static 'js/waypoints.min.js' %}"></script>
 	<script>
 		$('.counter').counterUp({
-				delay: 30,
-				time: 3000
+				delay: 50,
+				time: 1000
 			});
 	</script>
 </body>
