--- a/static/css/style.css
+++ b/static/css/style.css
@@ -584,9 +584,11 @@ section.spacer blockquote cite {
 /* === section works === */
 
 #works h4 {
-	margin-bottom:20px;
+	margin-bottom:10px;
 }
-
+#works {
+	padding-bottom: 0% !important;
+}
 #portfolio {
 	padding-bottom: 0;
 }
@@ -914,6 +916,20 @@ section#blog {
 	padding-top: 100px;
 }
 
+#video {
+	background:#eaeaea;	
+	text-align: center;
+}
+#video h4{
+	font-weight: 250;
+	color:#494949;
+}
+
+#video{
+	padding-bottom: 0px;
+	padding-top: 0px;
+}
+
 
 #register {
 	background:#d89a15;	
@@ -932,6 +948,35 @@ section#blog {
 	padding-top: 100px;
 }
 
+
+#payment {
+	background:#d89a15;	
+	text-align: center;
+}
+#payment h4{
+	font-weight: 450;
+	color:#ffffff;
+}
+#payment 
+	 p{
+	color: #e9e9e9ee;
+	font-size: 25px;
+	font-weight: 450;
+	line-height: 1.9em;
+}
+
+#payment{
+	padding-bottom: 90px;
+	padding-top: 100px;
+}
+#payment .flyLeft{
+	text-align: left;
+}
+
+.txt{
+	padding-left: 5%;
+	font-weight: 450 !important;
+}
 
 .people {
 	text-align:center;
@@ -1850,15 +1895,17 @@ i.icon-white {
 	color: #ffffff;
     font-size: 39px;
     text-transform: uppercase;
-    font-weight: 400;
+	font-weight: 550;
+	font-stretch: extra-condensed;
 }
 
 .title-year{
 	color: #ffbb00;
 	margin-left: 15px;
+	
     font-size: 39px;
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: 550;
 }
 
 @media(max-width:500px){
