--- a/static/css/style.css
+++ b/static/css/style.css
@@ -930,6 +930,21 @@ section#blog {
 	padding-top: 0px;
 }
 
+.video-container {
+position: relative;
+padding-bottom: 56.25%;
+padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
 
 #register {
 	background:#d89a15;	
@@ -971,6 +986,10 @@ section#blog {
 }
 #payment .flyLeft{
 	text-align: left;
+}
+.flyRight img{
+	width:60%;
+	
 }
 
 .txt{
