--- a/templates/home.html
+++ b/templates/home.html
@@ -403,7 +403,7 @@
 	</section>
 	<section id="video" class="section">
 		<div class="container">
-			<div class="row" style="padding-top:3%;">
+			<div class="row video-container" style="padding-top:3%;">
 				<iframe width="660" height="415" src="https://www.youtube-nocookie.com/embed/v4UejoHl9Ho" frameborder="0" allow="autoplay; encrypted-media"
 				 allowfullscreen></iframe>
 	
@@ -507,15 +507,22 @@
 	<!-- section: contact -->
 	
 	<section id="payment" class="section">
-		<div class="container">
-			<div class="span11  flyLeft">
-			<h4 style="text-align:left;">Оплатa</h4>
-			<div class="row payment1">				
-				<p class="txt">500 сом за каждого участника. Дата оплаты 9-марта</p>				
+		<div class="container">	
+			<div class="row">
+				<h4>Оплатa</h4>
+				<div class="span5 alignright flyLeft">
+					<p class="txt">
+						 500 сом за каждого участника. Дата оплаты 9-марта
+					</p>
+				</div>
+				<div class="span5 aligncenter flyRight">
+					<img src="{% static 'img/bc.png ' %}" alt="">
+				</div>
+			</div>							
 	
 			</div>
-			</div>
-		</div>
+			
+	
 	
 		<!-- /.container -->
 	</section>
