--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8">
 	<title>ROBOTOFEST | Олимпиада по робототехнике</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
@@ -515,7 +516,7 @@
 						 500 сом за каждого участника. Дата оплаты 9-марта
 					</p>
 				</div>
-				<div class="span5 aligncenter flyRight">
+				<div class="span3 alignright flyLeft">
 					<img src="{% static 'img/bc.png ' %}" alt="">
 				</div>
 			</div>							
