align for video

--- a/templates/home.html
+++ b/templates/home.html
@@ -404,9 +404,11 @@
 	</section>
 	<section id="video" class="section">
 		<div class="container">
-			<div class="row video-container" style="padding-top:3%;">
-				<iframe width="660" height="415" src="https://www.youtube-nocookie.com/embed/v4UejoHl9Ho" frameborder="0" allow="autoplay; encrypted-media"
-				 allowfullscreen></iframe>
+			<div class="row " style="padding-top:3%;">
+				<div class="video-container" style="max-width:80%; text-align:center;">
+					<iframe width="660" height="415" src="https://www.youtube-nocookie.com/embed/v4UejoHl9Ho" frameborder="0" allow="autoplay; encrypted-media"
+					 allowfullscreen></iframe>
+				</div>
 	
 			</div>
 		</div>
