--- a/static/css/style.css
+++ b/static/css/style.css
@@ -932,8 +932,10 @@ section#blog {
 
 .video-container {
 position: relative;
-padding-bottom: 56.25%;
+padding-bottom: 38.25%;
 padding-top: 30px; height: 0; overflow: hidden;
+	margin-left: 10%;
+	max-height: 80%;
 }
 
 .video-container iframe,
