--- a/templates/home.html
+++ b/templates/home.html
@@ -532,13 +532,31 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="span6 offset3">
+				<div class="span13 offset">					
 					<ul class="social-networks">
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-twitter icon-2x"></i></a></li>
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-dribbble icon-2x"></i></a></li>
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
 					</ul>
+				<div class="span5 sponsor alignRight">
+					<p>Спонсоры</p>
+					<a class="logo" href="{% url 'home' %}">
+						<img  href="https://sebat.edu.kg" alt="Sapat" src="{% static 'img/sapat.png' %}">
+					</a>
+				</div>
+				<div class="span5 alignLeft">
+					<ul class="contacts">
+						<p>Для справок</p>
+						<li >
+							+996772997713
+						</li>
+						<li>
+							azamat.tankeev@sebat.edu.kg
+						</li>
+					</ul>
+				</div>
+				<div class="last">
 					<p class="copyright">
 						&copy; ROBOTICS Olympiad All rights reserved.
 						<div class="credits">
@@ -551,7 +569,9 @@
 							<a href="https://github.com/tankeev">by Tankeev Azamat</a> 
 						</div>
 					</p>
+					</div>
 				</div>
+				
 			</div>
 		</div>
 		<!-- ./container -->
