--- a/templates/home.html
+++ b/templates/home.html
@@ -511,21 +511,14 @@
 	
 	<section id="payment" class="section">
 		<div class="container">	
-			<div class="row">
+			<div class="row span11 alignright flyLeft">
 				<h4>Оплатa</h4>
-				<div class="span5 alignright flyLeft">
+				<div ></div>
 					<p class="txt">
 						 500 сом за каждого участника. Дата оплаты 9-марта
 					</p>
 				</div>
-				<div class="span3 alignright flyLeft">
-					<img src="{% static 'img/bc.png ' %}" alt="">
-				</div>
-			</div>							
-	
 			</div>
-			
-	
 	
 		<!-- /.container -->
 	</section>
