padding to succes div

--- a/static/form/css/style.css
+++ b/static/form/css/style.css
@@ -439,6 +439,7 @@ FLoating labels
     padding: 50px;
     background-color: #42a2e1;
     color: #fff;
+    padding-top: 10%;
 }
 
 .sorry-message{
