activation messages russian

--- a/templates/registration/activate.html
+++ b/templates/registration/activate.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 
-<p class="success">{% trans "Account activation failed" %}</p>
+<p class="success">{% trans "ОХ--ООХХ  Возникла ошибка! Попробуйте заного." %}</p>
 
 {% endblock %}
