--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -3,5 +3,5 @@
 {% load i18n %}
 
 {% block content %}
-<p class="success" role="alert">{% trans "Your account is now activated." %}</p>
+<p class="success" role="alert">{% trans "Поздравляем! Ваш аккаунт успешно активирован!" %}</p>
 {% endblock %}
