--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -3,5 +3,5 @@
 {% load i18n %}
 
 {% block content %}
-<p class="success">{% trans "Email with password reset instructions has been sent." %}</p>
+<p class="success">{% trans "Дальнейшая инструкция изменения пароля отправлены на еmail." %}</p>
 {% endblock %}
