--- a/templates/home.html
+++ b/templates/home.html
@@ -523,6 +523,19 @@
 	
 		<!-- /.container -->
 	</section>
+	<section id="map" class="section">
+		<div class="container">
+			<div class="row">
+				<h4>Место расположения</h4>
+				<div class="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11704.409970548266!2d74.58962231056526!3d42.82844875830543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389ec995ca74945f%3A0xbd0e55b5a6d7337!2sCambridge+Silk+Road+International+School!5e0!3m2!1sen!2skg!4v1518939607692"
+					 width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+
+			</div>
+		</div>
+	</section>
+
 	<footer>
 		<div class="container">
 			<div class="row">
@@ -591,6 +604,8 @@
 	<script src="{% static 'js/jquery.countdown.min.js' %}"></script>
 	<script src="{% static 'js/front_countdown.js' %}"></script>
 	<script src="{% static 'js/waypoints.min.js' %}"></script>
+	<script src="{% static 'js/map.js' %}"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
 	<script>
 		$('.counter').counterUp({
 				delay: 50,
