--- a/static/css/style.css
+++ b/static/css/style.css
@@ -385,11 +385,24 @@ ul#menu-main > li > a:focus {
     padding-bottom: 51px;
 	text-align:center;
 }
+
+
+@media(max-width:430px){
+	#header-wrapper {
+	width: 100%;
+	min-height: 417px;
+	margin-top: -150px;
+	padding-top: 150px;
+    padding-bottom: 51px;
+	text-align:center;
+}
 	 
 	.countdown-number{
 		font-size:16px;
 	
 }
+
+
 }
 
 
