--- a/templates/home.html
+++ b/templates/home.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="{% static 'css/slide.css' %}">
 	<link rel="stylesheet" href="{% static 'css/timeline_dates.css' %}">
 	<link rel="stylesheet" href="{% static 'fontawesome-free-5.0.1-/css/font-awesome.css' %}">
+	<link rel="stylesheet" href="{% static 'slide_show.css' %}">
 	
 	
 	<!-- Fonts -->
@@ -34,16 +35,15 @@
 
 <body>
 	<!-- navbar -->
-	<div class="navbar-wrapper">
-		<!--for slide show-->
-	
+	<div class="navbar-wrapper">		
+		<!--for slide show-->	
 		<div class="navbar navbar-top-fixed">
-			<div class="navbar-inner">
+			<div class="navbar-inner">				
 				<div class="container cnt-nav">
 					<!-- Responsive navbar 
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</a>-->
-					
+						
 						<a class="navbar-brand" href="{% url 'home' %}">
 							<img alt="Brand" src="{% static 'img/logo_v.png' %}">
 						</a>
@@ -140,8 +140,8 @@
 					<div>
 						<p>
 							Олимпиада по робототехнике - долгожданная ступень в развитии роботехники среди детей и взрослых в Кыргызстане. Это событие
-							призвано собрать единомышленников, близких п  о увлечению людей и просто всех желающих погрузиться в увлекательный мир
-							робототехники. Немаловажную роль играет ноциональный статус олимпиады, это означает, что наши ребята получат уникальную
+							призвано собрать единомышленников, близких по увлечению людей и просто всех желающих погрузиться в увлекательный мир
+							робототехники. Немаловажную роль играет национальный статус олимпиады, это означает, что наши ребята получат уникальную
 							возможность поделиться знаниями и пообщаться со сверстниками из других регионов страны.
 						</p>
 					</div>
@@ -159,7 +159,7 @@
 				
 				<div class="span11 alignright flyLeft">
 					<blockquote class="large">
-						Собираются все таланты страны в одном месте <cite></cite>
+						 Все таланты собираются в Бишкеке <cite></cite>
 					</blockquote>
 				</div>
 				
@@ -479,7 +479,7 @@
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
-            <p>Дата оплаты участие<span class="article-number">03</span></p>
+            <p>Дата оплаты<span class="article-number">03</span></p>
           </div>
           
         </div>
