--- a/templates/home.html
+++ b/templates/home.html
@@ -219,7 +219,7 @@
 							<img src="{% static 'img/icons/ollo_ball.svg' %}" alt="" />
 							<h2>Ollo Ball Collector</h2>
 							<p>								
-								Собирать больше мячей на свою половину чем пробот ротивник
+								Собрать больше мячей на свою половину чем робот ротивник
 							</p>
 						</a>
 					</div>
