--- a/templates/home.html
+++ b/templates/home.html
@@ -132,14 +132,15 @@
 		<!-- /.container -->
 	</section>
 
-	<section id="result" class="spacer result">	
+	<section id="result" class="section spacer result">	
+		
 		<div class="container">
-			<h4>Результаты</h4>
 			<div class="row">
 	
-				<div class="span11 offset1">
+				<div class="span11 asd">
 					<div class="buttons">
-						<a href="accounts/register" class="btn-reg">Результаты</a>
+						<h4>Результаты</h4>
+						<a href="result" class="btn-reg">Скачать</a>
 					</div>
 				</div>
 	
