--- a/static/css/style.css
+++ b/static/css/style.css
@@ -984,7 +984,7 @@ height: 100%;
 
 
 
-/* resluts */
+/* resluts some code*/
 .spacer.result, .section.result{
 	background-color: #1bac91;
 	background:url(../img/res.jpg) 50% 0 no-repeat fixed;
